--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
+    "jotai": "^2.6.4",
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
@@ -50,6 +51,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-resizable-panels": "^2.0.1",
+    "react-social-icons": "^6.10.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
