--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
+    "immer": "^10.0.3",
     "jotai": "^2.6.4",
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
@@ -55,6 +56,7 @@
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1",
     "vaul": "^0.8.9",
     "zod": "^3.22.4"
   },
@@ -62,6 +64,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
