--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "immer": "^10.0.3",
     "jotai": "^2.6.4",
     "lucide-react": "^0.319.0",
+    "mathjs": "^12.3.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
