--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-katex": "^3.0.1",
     "react-resizable-panels": "^2.0.1",
     "react-social-icons": "^6.10.0",
     "sonner": "^1.4.0",
@@ -65,6 +66,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-katex": "^3.0.4",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
