--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@react-three/drei": "^9.97.5",
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.161.2",
+    "@vercel/postgres": "^0.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "drizzle-orm": "^0.29.3",
     "embla-carousel-react": "^8.0.0-rc22",
     "immer": "^10.0.3",
     "jotai": "^2.6.4",
@@ -74,6 +76,7 @@
     "@types/react-katex": "^3.0.4",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
